Fix issues with covering up add-task and first task, when having lots of tasks, or on small screens. Fix issues with not loading the css in the tasks iframe in chrome.

--- a/src/plugins/gmail-material/gmail-material.css
+++ b/src/plugins/gmail-material/gmail-material.css
@@ -95,6 +95,10 @@
   flex-direction: column;
 }
 
+.rt-gmail-material-iframe .kFwPee > * {
+  flex-shrink: 0;
+}
+
 .rt-gmail-material-iframe .kFwPee section:nth-last-of-type(2) {
   flex: 1;
 }
